kubernetes/release-b-configs/taskserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedreader-taskserver-release-b
  namespace: feedreader
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedreader-taskserver-release-b
  template:
    metadata:
      labels:
        app: feedreader-taskserver-release-b
    spec:
      containers:
      - name: feedreader-taskserver-release-b
        image:  xieyubo/feedreader-taskserver
      nodeSelector:
        kubernetes.io/arch: arm64
