kubernetes/release-b-configs/webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedreader-webserver-release-b
  namespace: feedreader
spec:
  replicas: 2
  selector:
    matchLabels:
      app: feedreader-webserver-release-b
  template:
    metadata:
      labels:
        app: feedreader-webserver-release-b
    spec:
      containers:
      - name: feedreader-webserver-release-b
        image: xieyubo/feedreader-webserver
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/arch: arm64
---
apiVersion: v1
kind: Service
metadata:
  name: feedreader-webserver-release-b
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: feedreader-webserver-release-b
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedreader-webserver-release-b
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.release-b.feedreader.org
    secretName: feedreader-webserver-release-b-tls
  rules:
  - host: api.release-b.feedreader.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feedreader-webserver-release-b
            port:
              number: 80
